<resources>
    <string name="app_name">Whistler</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_update">Update</string>
    <string name="about_n_help">About &amp; Help</string>
    <string name="about_n_help_info">FAQ, Contact, Privacy Policy and Licence</string>
    <string name="attention">Attention</string>
    <string name="add_new_recipient">Add new recipient</string>
    <string name="add_new_recipient_list">Add new recipient list</string>
    <string name="ra_add_collect_server">Add Server</string>
    <string name="ra_blank">Blank</string>
    <string name="cancel">Cancel</string>
    <string name="circle_of_trust">Circle of Trust</string>
    <string name="circle_of_trust_info">Manage your most trusted contacts who will be alerted when you activate panic mode</string>
    <string name="change_secret_moder_passcode">Change secret mode password</string>
    <string name="change_panic_mode_password">Change panic mode password</string>
    <string name="create_new_panic_password">Create new panic mode passcode</string>
    <string name="change_panic_password">Change panic mode password</string>
    <string name="create_pass_info">In order to ensure maximum security, please create your application lock pattern. This pattern will be used for unlocking
        the Whistler app on every run, so nobody except you can access your data. Pattern must contain at least 6 dots. </string>
    <string name="contact_us">Contact us</string>
    <string name="copyright">Copyright © 2018 Build A Movement</string>
    <string name="ra_collect">Collect</string>
    <string name="create_new_report">Create new report</string>
    <string name="contact_info">For recipients who want to ask you additional questions before using or publishing your evidence</string>
    <string name="contact_info_disabled"><![CDATA[For recipients who want to ask you additional questions before using or publishing your evidence. You must first specify you contact information <a href="whistler_scheme://open.contact_settings.activity">here</a>.]]></string>
    <string name="download_in_progress">Download in progress…</string>
    <string name="download_completed">Download completed.</string>
    <string name="download_starting">Starting download…</string>
    <string name="draft_reports">Draft reports</string>
    <string name="delete_draft">Delete draft?</string>
    <string name="delete_sent_report">Delete sent report?</string>
    <string name="delete">Delete</string>
    <string name="ra_draft">Draft</string>
    <string name="ra_download">Download</string>
    <string name="drafts">Drafts</string>
    <string name="drafts_info">Edit and send reports that you\'ve already started</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="description_info">Include here any information that may help recipients better understand your report (who is in the video, what exactly happened, what was the context, ets).</string>
    <string name="decide_recipient_info">Decide who will receive your reports.</string>
    <string name="evidence">Evidence</string>
    <string name="error">Error</string>
    <string name="empty_field_error">This field can not be empty.</string>
    <string name="edit_report">Edit report</string>
    <string name="edit_recipient">Edit contact information</string>
    <string name="empty_list_archived">Your archive is currently empty.</string>
    <string name="erase_contacts">Circle of trust</string>
    <string name="erase_recipients_and_lists">Report recipients and lists</string>
    <string name="erase_materials">Training materials</string>
    <string name="erase_instruction">When Panic Mode is activated, Whistler can erase the sensitive data you want to prevent from being accessed by a third party. Select here which data should be erased:</string>
    <string name="erasing_data">Erasing sensitive data</string>
    <string name="exit">Press back button again to exit</string>
    <string name="email_field_error">Field is not valid email address</string>
    <string name="ra_collect_server_load_error">Error trying to get servers list. Please try again.</string>
    <string name="ra_collect_server_create_error">Error creating server settings. Please try again.</string>
    <string name="ra_collect_server_update_error">Error updating server settings. Please try again.</string>
    <string name="ra_collect_server_remove_error">Error removing server settings. Please try again.</string>
    <string name="faq">faq</string>
    <string name="ra_gallery">Gallery</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="include_geolocation">Include geolocation in SMS</string>
    <string name="include_contact_information">Include contact information</string>
    <string name="lists">Lists</string>
    <string name="log_out">Log out</string>
    <string name="lock_screen_open">Open</string>
    <string name="lock_screen_create_pattern">Create pattern</string>
    <string name="lock_screen_passphrase_hint">Enter passphrase</string>
    <string name="location_info">Location info</string>
    <string name="licence">Licence</string>
    <string name="make_oppression_info">Manage recipients and lists</string>
    <string name="metadata_waiting_progress">Collecting current location metadata. You can skip it and continue with Report creation.</string>
    <string name="make_report_public">Make Report Public</string>
    <string name="make_report_public_desc">Your report will be available for anyone to view on the Whistler website. If you keep it private, only your recipients will be able to view it.</string>
    <string name="make_report_public_disabled_desc">Your report cannot be public when you include contact information.</string>
    <string name="ra_manage_servers">Manage servers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_recipient">Add new contact in your Circle of Trust</string>
    <string name="name_of_recipient">Name of recipient</string>
    <string name="name_of_recipient_list">Name of recipient list</string>
    <string name="new_list">Create new list</string>
    <string name="name">Name</string>
    <string name="new_report">New report</string>
    <string name="not_included">Not included</string>
    <string name="no_recipient_available">No recipient available</string>
    <string name="no_recipient_list_available">No list available</string>
    <string name="new_recipient_short">New recipient</string>
    <string name="new_list_short">New list</string>
    <string name="ok">OK</string>
    <string name="ra_open">Open</string>
    <string name="ra_odk_invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="ra_odk_required_answer_error">Sorry, this response is required!</string>
    <string name="panic_mode_activation">Panic mode activation</string>
    <string name="permission_call">In order to access Whistler application from secret mode Call permission is needed.</string>
    <string name="permission_sms">In order to notify your friends that panic mode is activated, you need to allow Whistler permission to send SMS.</string>
    <string name="permission_audio">In order to record audio files, you need to allow access to microphone.</string>
    <string name="permission_location">In order to share your location, you need to allow access to GPS.</string>
    <string name="panic_message">Panic message</string>
    <string name="panic_message_info">Draft the message that your circle of trust will receive when you activate panic mode</string>
    <string name="panic_message_saved">Panic message is saved successfully.</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="password_old">Old password</string>
    <string name="password_new">New password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="password_match_error">Password does not match the confirm password.</string>
    <string name="password_changed">Password is changed successfully.</string>
    <string name="panic_secret_password_error">Panic and Secret passwords can\'t be the same.</string>
    <string name="panic_message_title">Your panic message will be sent by SMS to your Circle of Trust when you activate Panic Mode. Make sure it is clear and to the point. Consider using code language in case your SMS is intercepted.</string>
    <string name="panic_message_geolocation">Including your geolocation will allow your Circle of Trust to find exactly where you triggered Panic Mode. However,
        it requires GPS to be enabled.</string>
    <string name="panic_sent">Panic message sent successfully.</string>
    <string name="panic_sent_error_generic">Panic message sending failed, because of a generic failure.</string>
    <string name="panic_sent_error_service"> Panic message sending failed, because of a service error.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="recipients">Recipients</string>
    <string name="record_audio">Record audio</string>
    <string name="removed_recipient">Recipient successfully removed.</string>
    <string name="removed_recipient_list">Recipient list successfully removed.</string>
    <string name="recipient_added">Recipient successfully added.</string>
    <string name="recipient_list_added">Recipient list successfully added.</string>
    <string name="recipient_remove_all_text"> You are about to delete recipient %1$s. Do you want to proceed?</string>
    <string name="ra_report">Report</string>
    <string name="sensitive_data">Sensitive data</string>
    <string name="sensitive_data_info">Select what data from Whistler you want erased when you activate panic mode</string>
    <string name="source_code">Source code</string>
    <string name="ra_attachments">Attachments</string>
    <string name="ra_save_form">Save form</string>
    <string name="ra_whistler_gallery">Whistler Gallery</string>
    <string name="ra_general">General</string>
    <string name="ra_general_settings_info">Manage language and method of sending multimedia attachments</string>
    <string name="ra_security_settings">Security</string>
    <string name="ra_security_settings_info">Manage Secret Mode and the Panic Button</string>
    <string name="ra_contact_settings">Contact</string>
    <string name="ra_contact_settings_info">Decide how recipients can reach you</string>
    <string name="ra_report_settings_info">Manage contact information, recipients and lists</string>
    <string name="ra_everything">Everything</string>
    <string name="ra_draft_and_sent_reports">Draft and sent Reports</string>
    <string name="ra_draft_and_submitted_collect_forms">Draft and submitted Collect forms</string>
    <string name="camouflage_explanatory_text">Camouflage enables you to hide Whistler on your device, so that anyone searching it will not be able to see that you have Whistler. Remember that the name "Whistler" and the original logo will remain visible in your device\'s settings, so an in-depth search may expose you.</string>
    <string name="none">None</string>
    <string name="keep_whistler_regular">Keep Whistler\'s regular appearance</string>
    <string name="change_appearance">Change appearance</string>
    <string name="select_name_and_logo">Select a different name and logo</string>
    <string name="make_invisible">Make invisible</string>
    <string name="make_invisible_info">Whistler will disappear from your list of apps. To open it, dial and call your secret code from your regular calling app. Tap here to create or edit your secret code</string>
</resources>