<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wa_white"
    android:clipToPadding="false"
    android:paddingBottom="60dp"
    android:textDirection="locale"
    tools:context="rs.readahead.washington.mobile.views.fragment.EraseSensitiveDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/erase_instruction"
            android:textColor="@color/wa_black"
            android:textSize="14sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/erase_everything"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewBlack"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/ra_everything"/>

        <View style="@style/SettingsMainLine"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/erase_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewBlack"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/ra_whistler_gallery"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/erase_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewBlack"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/erase_contacts"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/erase_media_recipients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewBlack"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/erase_recipients_and_lists"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/erase_materials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewBlack"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/erase_materials"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/erase_reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewBlack"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/ra_draft_and_sent_reports"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/erase_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextViewBlack"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/ra_draft_and_submitted_collect_forms"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

