<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/saveFormMenuItem"
        android:orderInCategory="100"
        android:title="@string/ra_save_form"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deleteFormMenuItem"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/formAttachmentsMenuItem"
        android:orderInCategory="100"
        android:title="@string/ra_attachments"
        app:actionLayout="@layout/attach_file_with_badge"
        android:visible="false"
        app:showAsAction="always"/>
</menu>
