<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wa_light_gray"
    android:orientation="vertical"
    android:textDirection="locale"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activity.PanicModeSettingsActivity"
    tools:showIn="@layout/activity_panic_mode">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/panic_message"
                    style="@style/ClickableVerticalLinerLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/panic_message" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/panic_message_info" />
                </LinearLayout>

                <View style="@style/SettingsMainLine" />

                <LinearLayout
                    android:id="@+id/circle_of_trust"
                    style="@style/ClickableVerticalLinerLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/circle_of_trust" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/circle_of_trust_info" />
                </LinearLayout>

                <View style="@style/SettingsMainLine" />

                <LinearLayout
                    android:id="@+id/sensitive_data"
                    style="@style/ClickableVerticalLinerLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/sensitive_data" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/sensitive_data_info" />
                </LinearLayout>

                <View style="@style/SettingsMainLine" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </FrameLayout>

</LinearLayout>
