<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.readahead.washington.mobile.views.activity.AboutHelpActivity"
    tools:showIn="@layout/activity_about_help">

    <LinearLayout
        android:id="@+id/content_go4yu_about"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/wa_black"
            android:layout_marginTop="16dp"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textColor="@color/wa_dialog_gray"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/whistler_logo_black"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"/>

        <View style="@style/AboutTextSeparator"/>

        <TextView
            android:id="@+id/faq"
            style="@style/AboutText"
            android:text="@string/faq"
            android:textAllCaps="true"/>

        <View style="@style/AboutTextSeparator"/>

        <TextView
            android:id="@+id/contact"
            style="@style/AboutText"
            android:text="@string/contact_us"/>

        <View style="@style/AboutTextSeparator"/>

        <TextView
            android:id="@+id/privacy"
            style="@style/AboutText"
            android:text="@string/privacy_policy"/>

        <View style="@style/AboutTextSeparator"/>

        <TextView
            android:id="@+id/licence"
            style="@style/AboutText"
            android:text="@string/licence"/>

        <View style="@style/AboutTextSeparator"/>

        <TextView
            android:id="@+id/source_code"
            style="@style/AboutText"
            android:text="@string/source_code"/>

        <View style="@style/AboutTextSeparator"/>

    </LinearLayout>
</ScrollView>

