<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/wa_white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activity.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/SettingsMainLine" />

            <LinearLayout
                android:id="@+id/general_settings"
                style="@style/SettingsClickableHorizontalLinerLayout">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/SettingsImageViewSize"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_general_black_24px" />

                <LinearLayout style="@style/VerticalLinearLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/ra_general" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/ra_general_settings_info" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/SettingsMainLine" />

            <LinearLayout
                android:id="@+id/collect_settings"
                style="@style/SettingsClickableHorizontalLinerLayout">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/SettingsImageViewSize"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_collect_menu" />

                <LinearLayout style="@style/VerticalLinearLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/ra_collect" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/ra_manage_servers" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/SettingsMainLine" />

            <LinearLayout
                android:id="@+id/make_oppression_backfire_layout"
                style="@style/SettingsClickableHorizontalLinerLayout">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/SettingsImageViewSize"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_report_menu" />

                <LinearLayout style="@style/VerticalLinearLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/ra_report" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/ra_report_settings_info" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/SettingsMainLine" />

          <!--  <LinearLayout
                android:id="@+id/panic_mode_layout"
                style="@style/VerticalLinearLayout">

                <TextView
                    style="@style/TextViewBlack"
                    android:text="@string/settings_panic_mode" />

                <TextView
                    style="@style/SettingsDescriptionTextView"
                    android:text="@string/settings_panic_mode_info" />
            </LinearLayout>

            <View style="@style/SettingsMainLine" /> -->

            <LinearLayout
                android:id="@+id/security_settings_layout"
                style="@style/SettingsClickableHorizontalLinerLayout">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/SettingsImageViewSize"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_security_black_24px" />

                <LinearLayout style="@style/VerticalLinearLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/ra_security_settings" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/ra_security_settings_info" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/SettingsMainLine" />

            <LinearLayout
                android:id="@+id/about_n_help_layout"
                style="@style/SettingsClickableHorizontalLinerLayout">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/SettingsImageViewSize"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/whistler_logo_black" />

                <LinearLayout style="@style/VerticalLinearLayout">

                    <TextView
                        style="@style/SettingsTextViewBlack"
                        android:text="@string/about_n_help" />

                    <TextView
                        style="@style/SettingsTextViewGray"
                        android:text="@string/about_n_help_info" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/SettingsMainLine" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>

