<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/wa_white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activity.ReportSettingsActivity"
    tools:showIn="@layout/activity_report_settings">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/recipients_settings"
                style="@style/ClickableVerticalLinerLayout">

                <TextView
                    style="@style/SettingsTextViewBlack"
                    android:text="@string/recipients" />

                <TextView
                    style="@style/SettingsTextViewGray"
                    android:text="@string/make_oppression_info" />
            </LinearLayout>

            <View style="@style/SettingsMainLine" />

            <LinearLayout
                android:id="@+id/contact_settings"
                style="@style/ClickableVerticalLinerLayout">

                <TextView
                    style="@style/SettingsTextViewBlack"
                    android:text="@string/ra_contact_settings" />

                <TextView
                    style="@style/SettingsTextViewGray"
                    android:text="@string/ra_contact_settings_info" />
            </LinearLayout>

            <View style="@style/SettingsMainLine" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>

